--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
     <meta charset="utf-8">
     <title>KiaOS Experiments</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+    <style>
+	   section button {
+		width: 100%;   
+	    }
+	    
+	    section {
+		margin-bottom: 10px;    
+	    }
+    </style>
+</head>
   <body>
-	<main>
+     <main>
       <section>
         <button id="launchHotSpot">Hotspot</button>
       </section>
