--- a/index.html
+++ b/index.html
@@ -27,22 +27,13 @@
       </section>
     </main>
     <script>
-      function xProcess(cmd) {
-        try {
-          alert(JSON.stringify(Components))
-          var file = Components.classes['@mozilla.org/file/local;1'].createInstance(Components.interfaces.nsILocalFile)
-          var process = Components.classes['@mozilla.org/process/util;1'].createInstance(Components.interfaces.nsIProcess)
-          var args = ['-c', cmd]
-          file.initWithPath('/system/bin/sh')
-          process.init(file)
-          process.runAsync(args, args.length, {})
-        } catch (e) {
-          alert('Error: ' + e)
-        }
+      function testFun() {
+        var masterExt = navigator.engmodeExtension || navigator.jrdExtension || navigator.kaiosExtension;
+        alert(masterExt);
       }
       
       document.getElementById('launchTest').addEventListener('click', function() {
-         xProcess("ls");
+         testFun("ls");
       }, false);
 	    
       document.getElementById('launchDeveloperMode').addEventListener('click', function() {
