--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button id="launchHotSpot">Hotspot</button>
       </section>
       <section>
-        <button id="launchDeveloperMode">Developer Mode</button>
+        <button id="launchDeveloperMode">DevMode</button>
       </section>
       <section>
         <button id="launchCamera">Camera</button>
